build(java): bump Java version to 25
- also reformated some code
- change some code to adapt java 25's new language feature